--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-green {
+  color: '#49SE57';
+}
+
+.text-yellow {
+  color: '#F4CE14';
+}
+
+h1 {
+  font-size: 64pt;
+  font-weight: medium;
+}
+
+h2 {
+  font-size: 40pt;
+  margin-top: 0;
+}
+
+.lead-text {
+  font-size: 18pt;
+  font-weight: medium;
+}
+
+.main-grid {
+  display: grid;
+  height: 150vh;
+  grid-template-rows: auto 1fr auto;
+}
+
+header {
+  display: flex;
+  padding: 10px;
+}
+
+header>div {
+  flex-grow: 1;
+  padding-left: 20px;
+}
+
+nav ul li {
+  display: inline;
+  padding-right: 20px;
+  text-transform: uppercase;
+  list-style-type: none;
+  font-weight: bold;
+  font-size: 1rem;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+main {
+  background-color: green;
+}
+
+footer {
+  background-color: pink;
 }
