--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,33 @@ main {
   flex-grow: 1;
 }
 
+.about-section {
+  background-color: #EDEFEE;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 20px;
+  padding: 0px 50px 0px 50px;
+}
+
+.about-section .image1 {
+  height: 200px;
+  position: relative;
+  z-index: 10;
+  top: 50px;
+  border-radius: 8px;
+}
+
+.about-section .image2 {
+  height: 200px;
+  position: relative;
+  z-index: 20;
+  border-radius: 8px;
+  bottom: 50px;
+  left: 50px;
+}
+
+
+
 .info-section {
   background-color: #495e57;
   display: grid;
