--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,11 @@ main {
   background-color: white;
 }
 
+.booking-form-section {
+  padding: 60px 50px 0px 50px;
+  margin-bottom: 30px;
+}
+
 .specials-section {
   padding: 60px 50px 0px 50px;
   margin-bottom: 30px;
